# nexus-tutorial

./: README.md
C++Intro/: 0-scope.cpp  1-arguments.cpp  2-classes.cpp  3-inheritance.cpp  4-polymorphism.cpp  CMakeLists.txt  Inheritance.cpp  Inheritance.h  Shapes.cpp  Shapes.h
G4Basic/: .gitignore  CMakeLists.txt  G4Basic.cpp
G4Basic/mac/: init_vis.mac
G4Basic/src/: CMakeLists.txt  DetectorConstruction.cpp  DetectorConstruction.h  PrimaryGeneration.cpp  PrimaryGeneration.h  TrackingAction.cpp  TrackingAction.h
NexusReader/: NexusReader.ipynb  mc_io_functions.py
